<resources>
    <string name="app_name">Kisaan Suvidha</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_mobile">Contact Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_retype_password">Retype Password</string>
    <string name="hint_otp">One Time Password(OTP)</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_mobile">Enter your contact number</string>
    <string name="err_msg_mobile_digits">The contact number must be of 10 digits</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_otp">Enter the OTP</string>
    <string name="err_retype_password">This field should match password field</string>
    <string name="sign_up">Register</string>
    <string name="otp_msg">An OTP has been sent to your mobile phone.</string>
    <string name="products">Products</string>
    <string name="calculator">Calculator</string>
    <string name="schemes">Schemes</string>
    <string name="crops_diseases">Crops Diseases</string>
    <string name="agricultural_news">Agricultural News</string>
    <string name="discussion_forum">Discussion Forum</string>
    <string name="coming_soon_msg">Coming Soon!</string>

    <string name="hint_size">Bed Size</string>
    <string name="hint_line">Line Size</string>
    <string name="err_size">Enter this field</string>
    <string name="err_line">Enter this field</string>
    <string name="months_prompt">Choose the month</string>
    <string name="crops_prompt">Choose the crop</string>
    <string name="hint_bed_size">Bed Size(in Inches)</string>
    <string name="hint_bed_lines">No. of Bed lines</string>
    <string name="calculate">Calculate</string>

    <string name="spacing1">Spacing between seeds should be: %s inches</string>
    <string name="seed1">Number of seeds required per Acre: %s</string>

    <string-array name="months">
        <item>Choose a month of Farming</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="January">
        <item>Brinjal</item>
    </string-array>

    <string-array name="February">
        <item>Bittergourd</item>
        <item>Bottlegourd</item>
        <item>Cucumber</item>
        <item>French Beans</item>
        <item>Okra</item>
        <item>Sponge</item>
        <item>Watermelon</item>
        <item>Spinach</item>
    </string-array>

    <string-array name="March">
        <item>Bittergourd</item>
        <item>Bottlegourd</item>
        <item>Cucumber</item>
        <item>French Beans</item>
        <item>Okra</item>
        <item>Sponge</item>
        <item>Watermelon</item>
        <item>Spinach</item>
    </string-array>

    <string-array name="April">
        <item>Capsicum</item>

    </string-array>

    <string-array name="May">
        <item>Onion</item>
        <item>Pepper</item>
        <item>Brinjal</item>

    </string-array>

    <string-array name="June">
        <item>Bittergourd</item>
        <item>Bottlegourd</item>
        <item>Brinjal</item>
        <item>Cucumber</item>
        <item>Cauliflower (Early)</item>
        <item>Okra</item>
        <item>Onion</item>
        <item>Sem</item>
        <item>Tomato</item>
        <item>Pepper</item>
    </string-array>

    <string-array name="July">
        <item>Bittergourd</item>
        <item>Bottlegourd</item>
        <item>Cucumber</item>
        <item>Okra</item>
        <item>Sem</item>
        <item>Tomato</item>
    </string-array>

    <string-array name="August">
        <item>Carrot</item>
        <item>Cauliflower</item>
        <item>Radish</item>
        <item>Tomato</item>
    </string-array>

    <string-array name="September">
        <item>Cabbage</item>
        <item>Carrot</item>
        <item>Cauliflower</item>
        <item>Peas</item>
        <item>Radish</item>
        <item>Tomato</item>
        <item>Lettuce</item>
    </string-array>

    <string-array name="October">
        <item>Beet</item>
        <item>Brinjal</item>
        <item>Cabbage</item>
        <item>Cauliflower</item>
        <item>Lettuce</item>
        <item>Peas</item>
        <item>Radish</item>
        <item>Spinach</item>
        <item>Turnip</item>
    </string-array>

    <string-array name="November">
        <item>Beet</item>
        <item>Peas</item>
        <item>Pepper</item>
        <item>Radish</item>
        <item>Tomato</item>
        <item>Turnip</item>
    </string-array>

    <string-array name="December">
        <item>Tomato</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
